<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- Activity labels -->
  <string name="app_name">Bucky</string>
  <string name="new_dataset_prompt">New dataset</string>

  <!-- field labels and hints -->
  <!-- new set -->
  <string name="new_set_submit">create</string>
  <string name="new_set_name_prompt">dataset name</string>
  <string name="new_set_numeric_type">numeric</string>
  <string name="new_set_text_type">text</string>
  <!-- new point -->
  <string name="new_point_submit">add</string>
  <string name="new_point_now">now?</string>
  <!-- set detail -->
  <string name="set_details">Dataset details</string>
  <string name="mean">mean</string>
  <string name="median">median</string>
  <string name="mode">mode</string>
  <string name="minimum">min</string>
  <string name="maximum">max</string>

  <!-- menu item text -->
  <string name="add_dataset_menu">Add dataset</string>
  <string name="add_datapoint_menu">Add datapoint</string>
  <string name="preferences_menu">Preferences</string>
  <string name="edit_menu">Edit</string>
  <string name="delete_menu">Delete</string>
  <string name="choose_set_prompt">Choose a dataset</string>
  <string name="datapoint_create_prompt">New datapoint</string>
  <string name="dataset_delete_prompt">Delete dataset \"%s\"?</string>
  <string name="confirm">Yes</string>
  <string name="decline">No</string>

  <!-- messages -->
  <string name="no_datasets_message">You don\'t have any data yet! Press Menu and choose &quot;Add dataset&quot; to get started.</string>
  <string name="add_dataset_first_message">You need to add a dataset first!</string>
  <string name="dataset_delete_confirmation">Deleted dataset \"%s\".</string>
  <string name="invalid_data_input">Cannot add \"%s\" because that isn\'t a number!</string>
</resources>
